@@ -1,5 +1,5 @@
 Application.id = FRD
-Application.version = 0.82
+Application.version = 0.83 beta
 Application.title = FreeRapid Downloader ${Application.version} door Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
